--- a/app/views/documentation/pages/_page.html.erb
+++ b/app/views/documentation/pages/_page.html.erb
@@ -4,6 +4,44 @@
     <p class="subtitle"><%= page.description %></p>
   </div>
 
+  <hr/>
+
+  <% if policy(page).edit? || policy(page).destroy? %>
+    <div>
+      <% if policy(page).edit? %>
+        <%= link_with_icon "Edit", 'edit', edit_workspace_page_path(@workspace, page) %>
+
+        |
+
+        <%= render Bali::Dropdown::Component.new do |c| %>
+          <%= c.trigger do %>
+            <%= icon_tag('arrow-right') %>
+            <span>Transfer to another workspace</span>
+          <% end %>
+
+          <% (@workspaces - [@workspace]).each do |workspace| %>
+            <%= c.item(
+                href: workspace_page_transfer_path(
+                  @workspace, page, { page: { documentation_workspace_id: workspace.id } }
+                ),
+                data: { 'turbo-method' => :put }) do %>
+              <%= workspace.name %>
+            <% end %>
+          <% end %>
+        <% end %>
+      <% end %>
+
+      <% if policy(page).destroy? %>
+        |
+
+        <%= link_with_icon "Delete", 'trash', workspace_page_path(@workspace, page), class: 'has-text-danger',
+        data: { 'turbo-confirm' => '¿Estás seguro?', 'turbo-method' => :delete } %>
+      <% end %>
+    </div>
+
+    <hr/>
+  <% end %>
+
   <div
     data-turbo-cache="false"
     class="rich-text-editor-component input mb-4 rich-editor-content"
@@ -12,39 +50,4 @@
     data-rich-text-editor-editable-value='false'
   >
   </div>
-</div>
-
-<hr/>
-
-<div>
-  <% if policy(page).edit? %>
-    <%= link_with_icon "Edit", 'edit', edit_workspace_page_path(@workspace, page) %>
-
-    |
-
-    <%= render Bali::Dropdown::Component.new do |c| %>
-      <%= c.trigger do %>
-        <%= icon_tag('arrow-right') %>
-        <span>Transfer to another workspace</span>
-      <% end %>
-
-      <% (@workspaces - [@workspace]).each do |workspace| %>
-        <%= c.item(
-            href: workspace_page_path(
-              @workspace, page, { page: { documentation_workspace_id: workspace.id } }
-            ),
-            data: { 'turbo-method' => :put }
-        ) do %>
-          <%= workspace.name %>
-        <% end %>
-      <% end %>
-    <% end %>
-  <% end %>
-
-  <% if policy(page).destroy? %>
-    |
-
-    <%= link_with_icon "Delete", 'trash', workspace_page_path(@workspace, page), class: 'has-text-danger',
-        data: { 'turbo-confirm' => '¿Estás seguro?', 'turbo-method' => :delete } %>
-  <% end %>
 </div>
