--- a/app/assets/stylesheets/documentation/general.scss
+++ b/app/assets/stylesheets/documentation/general.scss
@@ -11,3 +11,15 @@
 .is-fullheight {
   height: 100%;
 }
+
+.is-fullwidth {
+  width: 100%;
+}
+
+.box {
+  .is-top-right {
+    position: absolute;
+    top: $box-padding;
+    right: $box-padding;
+  }
+}
