--- a/app/views/documentation/permissions/_permission.html.erb
+++ b/app/views/documentation/permissions/_permission.html.erb
@@ -5,11 +5,11 @@
 
   <%= c.level_right do |lr| %>
     <%= lr.item do %>
-      <%= render Bali::AutoSubmitSelect::Component.new(
-                record: permission,
-                attribute: :action,
-                choices: Documentation::Permission.actions.keys,
-                url: workspace_permission_path(@workspace, permission)) %>
+      <%= auto_submit_select(
+          record: permission,
+          attribute: :action,
+          choices: Documentation::Permission.actions.keys,
+          url: workspace_permission_path(@workspace, permission)) %>
     <% end %>
 
     <%= lr.item do %>
