Update frontend helpers

--- a/app/views/documentation/workspaces/index.html.erb
+++ b/app/views/documentation/workspaces/index.html.erb
@@ -18,7 +18,7 @@
   <% @workspaces.each do |workspace| %>
     <div class="column is-one-quarter">
       <div class="box is-fullheight is-relative">
-        <h1 class="title is-3">
+        <h1 class="title is-3 pr-5">
           <%= link_to workspace.name, workspace_path(workspace) %>
         </h1>
 
