Upgrade to lookbook

--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -47,8 +47,8 @@
 @import 'sass/form/tools';
 
 @import 'sass/components/breadcrumb';
-// @import 'sass/components/card';
-// @import 'sass/components/dropdown';
+@import 'sass/components/card';
+@import 'sass/components/dropdown';
 @import 'sass/components/level';
 // @import 'sass/components/media';
 // @import 'sass/components/menu';
