--- a/app/views/documentation/images/index.html.erb
+++ b/app/views/documentation/images/index.html.erb
@@ -13,7 +13,7 @@
 
   <%= render Bali::ImageGrid::Component.new do |c| %>
     <%= @images.each do |image| %>
-      <%= c.image(id: dom_id(image), image_class: 'is-3by2') do |img| %>
+      <%= c.image(id: dom_id(image), image_ratio: 'is-3by2') do |img| %>
         <%= image_tag main_app.url_for(image.variant(:thumb)) %>
 
         <% img.footer(class: 'p-2') do %>
