Add ancestors to selector and last updated date

--- a/app/views/documentation/pages/_page.html.erb
+++ b/app/views/documentation/pages/_page.html.erb
@@ -4,6 +4,7 @@
     <p class="subtitle"><%= page.description %></p>
   </div>
 
+  <small>Fecha de última actualización: <%= page.latest_updated_date %></small>
   <hr/>
 
   <% if policy(page).edit? || policy(page).destroy? %>
