--- a/app/views/documentation/pages/_page.html.erb
+++ b/app/views/documentation/pages/_page.html.erb
@@ -4,7 +4,8 @@
     <p class="subtitle"><%= page.description %></p>
   </div>
 
-  <small>Fecha de última actualización: <%= page.latest_update_date %></small>
+  <small><%= t('activerecord.attributes.documentation/page.latest_update_date') %>: <%= l(page.updated_at, format: :date_twelve_hours) %></small>
+
   <hr/>
 
   <% if policy(page).edit? || policy(page).destroy? %>
