--- a/app/views/documentation/pages/edit.html.erb
+++ b/app/views/documentation/pages/edit.html.erb
@@ -20,4 +20,4 @@
 
 <%= render "form", page: @page %>
 
-<small><%= t('activerecord.attributes.documentation/page.latest_update_date') %>: <%= l(@page.updated_at, format: :date_twelve_hours) %></small>
+<small><%= t('documentation.page.latest_update_date') %>: <%= l(@page.updated_at, format: :date_twelve_hours) %></small>
