--- a/app/views/documentation/pages/_page.html.erb
+++ b/app/views/documentation/pages/_page.html.erb
@@ -17,7 +17,7 @@
 
         <%= render Bali::Dropdown::Component.new do |c| %>
           <%= c.trigger do %>
-            <%= icon_tag('arrow-right') %>
+            <%= render Bali::Icon::Component.new('arrow-right') %>
             <span>Transfer to another workspace</span>
           <% end %>
 
