--- a/app/views/documentation/pages/edit.html.erb
+++ b/app/views/documentation/pages/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="level-left">
     <nav class="breadcrumb" aria-label="breadcrumbs">
       <ul>
-        <li><%= link_with_icon "Cancel", 'chevron-left', workspace_page_path(@workspace, @page) %></li>
+        <li><%= link_to render(Bali::Icon::Component.new('chevron-left')) + 'Cancel', workspace_page_path(@workspace, @page) %></li>
       </ul>
     </nav>
   </div>
