update icon css

--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -79,7 +79,6 @@
 // Frontend Helpers styles
 //
 @import 'fe_disappear_animations';
-@import 'fe_icons';
 @import 'fe_notification';
 
 // Plugins defined in js-frontend-helpers
@@ -97,6 +96,7 @@
 // Bali Styles
 @import 'bali/card/index';
 @import 'bali/help_tip/index';
+@import 'bali/icon/index';
 @import 'bali/image_grid/index';
 @import 'bali/modal/index';
 @import 'bali/tabs/index';
