--- a/app/views/documentation/images/index.html.erb
+++ b/app/views/documentation/images/index.html.erb
@@ -1,24 +1,25 @@
-<%= turbo_frame_tag 'page_images' do %>
-  <h1 class="title is-4">Images</h1>
-
-  <%= form_with(url: page_images_path(@page), class: 'is-flex is-flex-direction-row') do |f| %>
-    <%= f.file_field_group :images, :multiple => true, :required => 'required', 
+<%= render(Bali::Tabs::Component.new) do |c| %>
+  <% c.tab(title: 'Images', icon: 'image', active: true) do %>
+    <%= turbo_frame_tag 'page_images' do %>
+      <%= form_with(url: page_images_path(@page), class: 'is-flex is-flex-direction-row') do |f| %>
+        <%= f.file_field_group :images, :multiple => true, :required => 'required', 
                              :accept => '.jpg, .jpeg, .png', 
                              choose_file_text: 'Select image',
                              non_selected_text: 'No image selected' %>
-    <%= f.submit "Save", class: 'button is-primary ml-4' %>
-  <% end %>
+        <%= f.submit "Save", class: 'button is-primary ml-4' %>
+      <% end %>
 
-  <hr />
+      <hr />
 
-  <%= render Bali::ImageGrid::Component.new do |c| %>
-    <%= @images.each do |image| %>
-      <%= c.image(id: dom_id(image), image_ratio: 'is-3by2') do |img| %>
-        <%= image_tag main_app.url_for(image.variant(:thumb)) %>
-
-        <% img.footer(class: 'p-2') do %>
-          <%= link_to render(Bali::Icon::Component.new('trash')), page_image_path(@page, image),
+      <%= render Bali::ImageGrid::Component.new do |c| %>
+        <%= @images.each do |image| %>
+          <%= c.image(id: dom_id(image), image_ratio: 'is-3by2') do |img| %>
+            <%= image_tag main_app.url_for(image.variant(:thumb)) %>
+            <% img.footer(class: 'p-2') do %>
+              <%= link_to render(Bali::Icon::Component.new('trash')), page_image_path(@page, image),
               class: 'button is-danger is-small', 'data-turbo-method' => :delete, data: { confirm: 'Are you sure?' } %>
+            <% end %>
+          <% end %>
         <% end %>
       <% end %>
     <% end %>
