--- a/app/views/documentation/pages/_documents.html.erb
+++ b/app/views/documentation/pages/_documents.html.erb
@@ -1,29 +1,1 @@
-<%= render(Bali::Table::Component.new) do |c| %>
-  <%= c.headers([
-          { name: 'Name' },
-          { name: 'Kind' },
-          { name: 'Uploaded at' },
-          { name: '' }
-        ]) %>
-  <% c.no_records_notification do %>
-    <%= render Bali::Icon::Component.new('alert-alt') %>
-    <p>So sorry, no records found!</p>
-  <% end %>
-
-  <% @documents.each do |document| %>
-    <%= c.row(id: dom_id(document)) do %>
-      <td>
-        <%= document.blob.filename %>
-      </td>
-      <td>
-        <%= document.blob.content_type %>
-      </td>
-      <td>
-        <%= document.created_at %>
-      </td>
-      <td>
-        <%= link_to render(Bali::Icon::Component.new('trash')), page_document_path(@page, document),
-              class: 'button is-danger is-small', 'data-turbo-method' => :delete, data: { confirm: 'Are you sure?' } %>
-      </td>
-    <% end %>
-  <% end %>
+<%= render 'documentation/documents/list', documents: @documents, page: @page %>
